--- a/index.html
+++ b/index.html
@@ -28,53 +28,58 @@
         </div>
       </section>
       <!--sTwo-->
-      <section>
-        <h3>LOREM IPSUM</h3>
+      <ul><section>
+       <li> <h3>LOREM IPSUM</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales
           dui. Interdum et malesuada
-        </p>
-        <h3>LOREM IPSUM</h3>
+        </p></li>
+        <li><h3>LOREM IPSUM</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales
           dui. Interdum et malesuada
-        </p>
-        <h3>LOREM IPSUM</h3>
+        </p></li>
+        <li><h3>LOREM IPSUM</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales
           dui. Interdum et malesuada
-        </p>
-        <h3>LOREM IPSUM</h3>
+        </p></li>
+        <li><h3>LOREM IPSUM</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales
           dui. Interdum et malesuada
-        </p>
+        </p></li>
         <h2>Czym się zajmujemy</h2>
         <img src="images/imga.jpg" alt="zdjeciepierwsze" width="370" height="294" />
         <img src="images/imgb.jpg" alt="zdjeciedrugie" width="370" height="294" />
         <img src="images/imgc.jpg" alt="zdjecietrzecie" width="370" height="294" />
-      </section>
+      </section></ul>
       <section>
         <!--sThree-->
         <h2>Nasz zespół</h2>
-        <img src="images/osobaa.jpg" alt="ziomeczekpierszy" width="270" height="260" />
+        <ul>
+        <li><img src="images/osobaa.jpg" alt="ziomeczekpierszy" width="270" height="260" />
         <p>John Doe</p>
-        <p>Product Designer</p>
-        <img src="images/osobab.jpg" alt="babeczka" width="270" height="260" />
+        <p>Product Designer</p></li>
+        <li><img src="images/osobab.jpg" alt="babeczka" width="270" height="260" />
         <p>John Doe</p>
-        <p>Frontend Developer</p>
-        <img src="images/osobac.jpg" alt="ziomeczektrzeci" width="270" height="260" />
+        <p>Frontend Developer</p></li>
+        <li><img src="images/osobac.jpg" alt="ziomeczektrzeci" width="270" height="260" />
         <p>John Doe</p>
-        <p>Marketing</p>
-        <img src="images/osobad.jpg" alt="ziomeczekczwarty" width="270" height="260" />
+        <p>Marketing</p></li>
+        <li><img src="images/osobad.jpg" alt="ziomeczekczwarty" width="270" height="260" />
         <p>John Doe</p>
-        <p>UI Designer</p>
+        <p>UI Designer</p></li>
+      </ul>
       </section>
     </main>
     <footer>
+      <address>
       <p>WebStudio</p>
       <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-      <p></p>
+      <p><a href="#">info@devstudio.com</a></p>
+      <p><a href="#">+48 111 111 111</a></p>
+    </address>
     </footer>
   </body>
 </html>
