--- a/index.html
+++ b/index.html
@@ -14,87 +14,92 @@
         <a href="#">Portfolio</a>
         <a href="#">Kontakt</a>
       </nav>
-      <a href="#">info@devstudio.com</a>
-      <a href="#">+48 111 111 111</a>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+48 111 111 111">+48 111 111 111</a>
     </header>
     <main>
-      <!-- sOne -->
       <section>
         <div>
           <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button type="button">Zamów usługe</button>
         </div>
       </section>
-      <!--sTwo-->
       <section>
         <ul>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
+            <hgroup>
+              <h2>LOREM IPSUM</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </hgroup>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
+            <hgroup>
+              <h2>LOREM IPSUM</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </hgroup>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
+            <hgroup>
+              <h2>LOREM IPSUM</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </hgroup>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
+            <hgroup>
+              <h2>LOREM IPSUM</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </hgroup>
           </li>
         </ul>
         <h2>Czym się zajmujemy</h2>
-        <img src="images/imga.jpg" alt="zdjeciepierwsze" width="370" height="294" />
-        <img src="images/imgb.jpg" alt="zdjeciedrugie" width="370" height="294" />
-        <img src="images/imgc.jpg" alt="zdjecietrzecie" width="370" height="294" />
+        <img src="images/services/programming.jpg" alt="keyboard" width="370" height="294" />
+        <img src="images/services/ui.jpg" alt="smartfon" width="370" height="294" />
+        <img src="images/services/desgin.jpg" alt="tablet" width="370" height="294" />
       </section>
-      <!--sThree-->
       <section>
         <h2>Nasz zespół</h2>
         <ul>
           <li>
-            <img src="images/osobaa.jpg" alt="ziomeczekpierszy" width="270" height="260" />
-            <p>John Doe</p>
-            <p>Product Designer</p>
+            <img src="images/team/personone.jpg" alt="Krzysztof" width="270" height="260" />
+            <div>John Doe</div>
+            <div>Product Designer</div>
           </li>
           <li>
-            <img src="images/osobab.jpg" alt="babeczka" width="270" height="260" />
-            <p>John Doe</p>
-            <p>Frontend Developer</p>
+            <img src="images/team/persontwo.jpg" alt="Magda" width="270" height="260" />
+            <div>John Doe</div>
+            <div>Frontend Developer</div>
           </li>
           <li>
-            <img src="images/osobac.jpg" alt="ziomeczektrzeci" width="270" height="260" />
-            <p>John Doe</p>
-            <p>Marketing</p>
+            <img src="images/team/personthre.jpg" alt="Maciek" width="270" height="260" />
+            <div>John Doe</div>
+            <div>Marketing</div>
           </li>
           <li>
-            <img src="images/osobad.jpg" alt="ziomeczekczwarty" width="270" height="260" />
-            <p>John Doe</p>
-            <p>UI Designer</p>
+            <img src="images/team/personfour.jpg" alt="Kuba" width="270" height="260" />
+            <div>John Doe</div>
+            <div>UI Designer</div>
           </li>
         </ul>
       </section>
     </main>
     <footer>
+      <div>WebStudio</div>
       <address>
-        <p>WebStudio</p>
-        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-        <p><a href="#">info@devstudio.com</a></p>
-        <p><a href="#">+48 111 111 111</a></p>
+        <div>m. Warszawa, Aleje Jerozolimskie 21</div>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+48 111 111 111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
