--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#">Kontakt</a>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48 111 111 111">+48 111 111 111</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
       <section>
@@ -63,10 +63,14 @@
             </hgroup>
           </li>
         </ul>
-        <h2>Czym się zajmujemy</h2>
-        <img src="images/services/programming.jpg" alt="keyboard" width="370" height="294" />
-        <img src="images/services/ui.jpg" alt="smartfon" width="370" height="294" />
-        <img src="images/services/desgin.jpg" alt="tablet" width="370" height="294" />
+        <ul>
+          <li>
+            <h2>Czym się zajmujemy</h2>
+            <img src="images/services/programming.jpg" alt="keyboard" width="370" height="294" />
+            <img src="images/services/ui.jpg" alt="smartfon" width="370" height="294" />
+            <img src="images/services/desgin.jpg" alt="tablet" width="370" height="294" />
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Nasz zespół</h2>
@@ -99,7 +103,7 @@
       <address>
         <div>m. Warszawa, Aleje Jerozolimskie 21</div>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48 111 111 111">+48 111 111 111</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
