--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             </hgroup>
           </li>
         </ul>
+        <h2>Czym się zajmujemy</h2>
         <ul>
           <li>
-            <h2>Czym się zajmujemy</h2>
             <img src="images/services/programming.jpg" alt="keyboard" width="370" height="294" />
-            <img src="images/services/ui.jpg" alt="smartfon" width="370" height="294" />
-            <img src="images/services/desgin.jpg" alt="tablet" width="370" height="294" />
           </li>
+          <li><img src="images/services/ui.jpg" alt="smartfon" width="370" height="294" /></li>
+          <li><img src="images/services/desgin.jpg" alt="tablet" width="370" height="294" /></li>
         </ul>
       </section>
       <section>
