--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <header>
       <nav>
-        <a href="#">WebStudio</a>
+        <a href="https://waclaw44.github.io/goit-markup-hw-01/">WebStudio</a>
         <a href="#">Agencja</a>
-        <a href="#">Portfolio</a>
+        <a href="https://waclaw44.github.io/goit-markup-hw-02/">Portfolio</a>
         <a href="#">Kontakt</a>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
