--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="https://waclaw44.github.io/goit-markup-hw-01/">WebStudio</a>
-        <a href="#">Agencja</a>
-        <a href="https://waclaw44.github.io/goit-markup-hw-02/">Portfolio</a>
-        <a href="#">Kontakt</a>
+        <a class="logoone" href="https://waclaw44.github.io/goit-markup-hw-01/">WebStudio</a>
+        <a class="logotwo" href="#">Agencja</a>
+        <a class="logothre" href="https://waclaw44.github.io/goit-markup-hw-02/">Portfolio</a>
+        <a class="logofour" href="#">Kontakt</a>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+48111111111">+48 111 111 111</a>
